--- a/src/pages/Home/FAQ/styles.module.scss
+++ b/src/pages/Home/FAQ/styles.module.scss
@@ -16,7 +16,7 @@
   .content {
     position: absolute;
     z-index: 1;
-    margin-left: 5%;
+    margin-left: 10%;
     margin-right: 45%;
     top: 15%;
     max-width: 1000px;
@@ -25,13 +25,14 @@
 
     @media screen and (min-width: 1600px) {
       width: 1100px;
+      font-size: 1.05em;
     }
   
     @media screen and (max-width: 1200px) {
       margin: auto;
-      left: 0%;
-      right: 0%;
+      right: 8%;
       width: 85%;
+      font-size: .95em;
     }
 
     h1 {
