--- a/src/pages/Home/Hero/styles.module.scss
+++ b/src/pages/Home/Hero/styles.module.scss
@@ -26,11 +26,10 @@
   }
 
   .wave {
-    position: absolute;
-    left: 0%;
-    right: 0%;
-    top: 1.7%;
-    bottom: 90.99%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
   }
 
   .logo {
